--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,9 @@
         <button class="page-button" type="submit">Search</button>
       </form>
 
-      <span class="loader" style="display: none"></span>
-
       <div class="gallery"></div>
+      <button class="load-button" type="button">Load more</button>
+      <span class="loader" style="display: none"></span>
     </main>
   </body>
 </html>
